boto_scripts/alb-cf-template.yml
# [Securing AWS Load Balancers with SSL/TLS - Hands-on](https://www.youtube.com/watch?v=R-x1qudp1ig)
# [Failover Routing with AWS Elastic Load Balancer (AWS ALB)](https://www.youtube.com/watch?v=6Rc93TwAz6Q&list=PLO95rE9ahzRs0QMA8qtIAstWFo4X4gHtH&index=19)

AWSTemplateFormatVersion: "2010-09-09"
Description: Deploy an ASG with instances across two AZs and an ALB in front.
Parameters:
    VPCId:
        Description: Select the VPC
        Type: AWS::EC2::VPC::Id
    SubnetIdOne:
        Description: Select the first subnet for the ALB and Instance
        Type: AWS::EC2::Subnet::Id
    SubnetIdTwo:
        Description: Select the second subnet for the ALB and Instance
        Type: AWS::EC2::Subnet::Id
    ImageId:
        Description: AMI ID for the EC2 instances
        Type: AWS::EC2::Image::Id
    InstanceType:
        Description: EC2 instance type
        Type: String
        Default: t2.micro
Resources:
    ALBSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: Allow HTTP to the load balancer
            VpcId: !Ref VPCId
            SecurityGroupIngress:
                - IpProtocol: tcp
                  FromPort: 80
                  ToPort: 80
                  CidrIp: 0.0.0.0/0
    InstanceSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: Allow HTTP from the ALB
            VpcId: !Ref VPCId
            SecurityGroupIngress:
                - IpProtocol: tcp
                  FromPort: 80
                  ToPort: 80
                  SourceSecurityGroupId: !Ref ALBSecurityGroup
    LaunchTemplate:
        Type: AWS::EC2::LaunchTemplate
        Properties:
            LaunchTemplateName: MyLaunchTemplate
            LaunchTemplateData:
                ImageId: !Ref ImageId
                InstanceType: !Ref InstanceType
                SecurityGroupIds:
                    - !Ref InstanceSecurityGroup
                UserData: !Base64 |
                    #!/bin/bash
                    yum update -y
                    yum install -y httpd
                    systemctl start httpd
                    systemctl enable httpd
                    # Fetch the token for IMDSv2
                    TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600" || echo ""`
                    # Use the token to fetch the availability zone
                    if [ -n "$TOKEN" ]; then
                      AZ=`curl -H "X-aws-ec2-metadata-token: $TOKEN" -s http://169.254.169.254/latest/meta-data/placement/availability-zone`
                    else
                      AZ="Unknown"
                    fi
                    echo "<h1>This instance is in Availability Zone: $AZ</h1>" > /var/www/html/index.html
    AutoScalingGroup:
        Type: AWS::AutoScaling::AutoScalingGroup
        Properties:
            AutoScalingGroupName: MyAutoScalingGroup
            MinSize: "1"
            MaxSize: "2"
            DesiredCapacity: "2"
            LaunchTemplate:
                LaunchTemplateId: !Ref LaunchTemplate
                Version: !GetAtt LaunchTemplate.LatestVersionNumber
            VPCZoneIdentifier:
                - !Ref SubnetIdOne
                - !Ref SubnetIdTwo
            TargetGroupARNs:
                - !Ref TargetGroup
    LoadBalancer:
        Type: AWS::ElasticLoadBalancingV2::LoadBalancer
        Properties:
            Subnets:
                - !Ref SubnetIdOne
                - !Ref SubnetIdTwo
            SecurityGroups:
                - !Ref ALBSecurityGroup
    TargetGroup:
        Type: AWS::ElasticLoadBalancingV2::TargetGroup
        Properties:
            Port: 80
            Protocol: HTTP
            VpcId: !Ref VPCId
            HealthCheckEnabled: true
            HealthCheckPath: /
            Matcher:
                HttpCode: "200"
    Listener:
        Type: AWS::ElasticLoadBalancingV2::Listener
        Properties:
            DefaultActions:
                - Type: forward
                  TargetGroupArn: !Ref TargetGroup
            LoadBalancerArn: !Ref LoadBalancer
            Port: 80
            Protocol: HTTP
